# market-intel-brain-main

./: .env.example  .pre-commit-config.yaml  ENTERPRISE_ARCHITECTURE.md  PIPELINE_REGENERATION_REPORT.md  core_engine_client.go  data_ingestion.go  health.go  lockfile_output.txt
market-intel-brain-main/: .bandit  .env  .env.example  .env.hybrid  .gitignore  .golangci.yml  .pre-commit-config.yaml  .semgrepignore  ACTION_ERRORS_REPORT.md  ARCHITECTURE.md  CHAOS_TEST_SUMMARY.md  COMPREHENSIVE_ACTION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  Dockerfile  Dockerfile.rust  FINAL_PYTHON_REMOVAL_REPORT.md  GAP_ANALYSIS_V3.md  LEGACY_CLEANUP_REPORT.md  LICENSE  MAIFA_ERROR_CONTRACT_IMPLEMENTATION.md  MISSING_STEPS_REPORT.md  Makefile  ORCHESTRATOR_IMPLEMENTATION.md  PHASE21_5_AGENT_INFRASTRUCTURE_REPORT.md  PHASE21_5_TASK_B_EXECUTION_SAFETY_REPORT.md  PHASE21_5_TASK_C_HOT_RELOAD_CONFIG_REPORT.md  PHASE21_TECHNICAL_DEBT_REPORT.md  PHASE4_SECURITY_DELIVERABLES.md  PHASE5_E2E_VALIDATION_REPORT.md  README-HOOKS.md  README.md  SYSTEM_DIAGNOSIS_AND_FIXES_REPORT.md  TRIGGER_PIPELINE.md  __init__.py  aeron-messaging-summary.md  api-keys-config.txt  audit-summary.md  authenticated_providers.py  (+65 more)
market-intel-brain-main/.github/workflows/: brain.yml  ci-broken-backup.yml  ci-cd.yml  ci-final.yml  ci-pipeline-broken.yml  ci-pipeline-with-enterprise-errors.yml  ci-pipeline-with-python.yml  ci-pipeline.yml  ci-updated.yml  ci.yml  dependency-updates.yml  pipeline-broken-enterprise.yml  pipeline.yml  robust-project-auditor.yml  rust-ci-cd.yml
market-intel-brain-main/01_Perception_Layer/: __init__.py
market-intel-brain-main/02_Event_Fabric/: __init__.py
market-intel-brain-main/04_Unified_Memory_Layer/: __init__.py
market-intel-brain-main/07_Outcome_Fusion/: __init__.py
market-intel-brain-main/adapters/: binance_adapter.py.backup
market-intel-brain-main/agents/: agent1.py  hunter_agent.py
market-intel-brain-main/agents/baseagent/: __init__.py
market-intel-brain-main/agents/registry/: agent_registry.py
market-intel-brain-main/ai_integration/: README.md
market-intel-brain-main/ai_integration/middleware/: OPTIMIZATION_SOLUTIONS.md  openapi_schema.py  performance_optimization.py
market-intel-brain-main/api/: Cargo.toml  websocket.py
market-intel-brain-main/brain/: logger_setup.py  logging_config.py
market-intel-brain-main/chaos-testing/: chaos-engine.sh
market-intel-brain-main/core/: Cargo.toml  agent_registry.py  backpressure.py  db.py  exceptions.py  governance.py  monitoring.py  orchestrator.py  resource_pool.py
market-intel-brain-main/core/src/: config.rs  core_engine.rs  disruptor.rs  errors.rs  events.rs  lib.rs  traits.rs  types.rs  utils.rs
market-intel-brain-main/deploy/k8s/: configmap.yaml  idempotency-config.yaml  ingress-canary.yaml  ingress-shadowing.yaml  namespace.yaml
market-intel-brain-main/devops/: Tiltfile  skaffold.yaml
market-intel-brain-main/devops/scripts/: dev-post-start.sh  dev-pre-start.sh
market-intel-brain-main/docs/: ARCHITECTURE.md  CONFIGURATION.md  PROJECT_STRUCTURE.md
market-intel-brain-main/dqs/: README.md  __init__.py  sanity_checker.py  welford.py
market-intel-brain-main/finops/: budget_firewall.py  cost_calculator.py  exceptions.py  token_bucket.py
market-intel-brain-main/guard/: README.md  __init__.py  exceptions.py  fingerprint.py  schema_guard.py
market-intel-brain-main/infrastructure/: __init__.py  auth.py  data_normalization.py  data_pipeline.py  database.py  io_optimizer.py  monitoring.py  performance.py
market-intel-brain-main/infrastructure/data_pipeline/: README.md  __init__.py  protobuf_schemas.py  realtime_processor.py
market-intel-brain-main/k8s/: configmap.yaml  configmaps.yaml  deployment.yaml  deployments.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  prometheus.yml  secrets.yaml  services.yaml
market-intel-brain-main/locks/: README.md  __init__.py  exceptions.py  manager.py
market-intel-brain-main/maifa_adapter/cache/: swr_engine.py  tiered_cache.py
market-intel-brain-main/maifa_adapter/core/: base_adapter.py  exceptions.py
market-intel-brain-main/maifa_adapter/identity/: __init__.py  proxy_manager.py
market-intel-brain-main/maifa_adapter/resilience/: circuit_breaker.py  rate_limiter.py  retry.py
market-intel-brain-main/maifa_adapter/schemas/: __init__.py
market-intel-brain-main/market-intel-project/: README.md
market-intel-brain-main/market-intel-project/agents/: baseagent.py  filter_agent.py  hunter_agent.py
market-intel-brain-main/messaging/: Cargo.toml
market-intel-brain-main/microservices/: Makefile  PHASE10_TRAFFIC_SHADOWING_REPORT.md  PHASE12_CHAOS_ENGINEERING_REPORT.md  PHASE13_DEVEX_REPORT.md  PHASE14_SLO_REPORT.md  PHASE15_RUNBOOKS_REPORT.md  PHASE16_ANALYTICS_REPORT.md  PHASE17_VECTOR_DATABASE_REPORT.md  PHASE2_IMPLEMENTATION.md  PHASE2_INSTRUCTIONS.md  PHASE3_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION.md  PHASE6_OBSERVABILITY_REPORT.md  PHASE7_CI_REPORT.md  PHASE8_LOAD_TESTING_REPORT.md  PROJECT_STRUCTURE.md  README.md  docker-compose-observability.yml  docker-compose.yml  prometheus.yml
market-intel-brain-main/orchestrator/: __init__.py  example_usage.py  orchestrator.py  registry.py  requirements.txt
market-intel-brain-main/pipelines/: aggregation.py  event_classification.py  preprocessing.py
market-intel-brain-main/qos/: priority.py  queue_manager.py  task_dispatcher.py
market-intel-brain-main/security/: settings.py
market-intel-brain-main/services/: ai_models.py  ai_models.py.backup  classifier.py  classifier.py.backup  data_ingestion.py.backup  sentiment_engine.py.backup
market-intel-brain-main/shadow/: README.md  __init__.py  comparator.py  example_usage.py  requirements.txt  shadow_engine.py
market-intel-brain-main/streaming/: Cargo.toml
market-intel-brain-main/telemetry/: README.md  __init__.py  collector.py  exporter.py  metrics.py  tracer.py
market-intel-brain-main/tests/: __init__.py  test_infrastructure.py  test_ingestion.py
market-intel-brain-main/utils/: helpers.py  hybrid_logger.py
(+470 files in other folders)
