[workspace]
members = [
    "core",
    "api",
    "data-ingestion", 
    "trading-engine",
    "risk-management",
    "analytics",
    "storage",
    "networking",
    "security",
    "config",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Market Intel Brain Team"]
license = "MIT"
homepage = "https://github.com/a01009408629-netizen/market-intel-brain"
repository = "https://github.com/a01009408629-netizen/market-intel-brain"
description = "Enterprise Financial Intelligence Platform - Rust Implementation"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web Framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Time & UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"

# Metrics & Monitoring
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Security
ring = "0.17"
argon2 = "0.5"
jsonwebtoken = "9.2"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Data Processing
polars = { version = "0.36", features = ["lazy", "temporal", "strings"] }
ndarray = "0.15"

# Financial & Math
rust_decimal = { version = "1.33", features = ["serde-float"] }
ordered-float = "4.1"

# Async Utilities
futures = "0.3"
async-trait = "0.1"

# Caching
moka = { version = "0.12", features = ["future"] }

# Message Queue (for cloud-native)
lapin = "2.3"

# Internal Crates
market-intel-core = { path = "core" }
market-intel-api = { path = "api" }
market-intel-data-ingestion = { path = "data-ingestion" }
market-intel-trading-engine = { path = "trading-engine" }
market-intel-risk-management = { path = "risk-management" }
market-intel-analytics = { path = "analytics" }
market-intel-storage = { path = "storage" }
market-intel-networking = { path = "networking" }
market-intel-security = { path = "security" }
market-intel-config = { path = "config" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
debug = true
opt-level = 0
