[build-system]
# Empty Python project configuration
# This file exists only to satisfy Enterprise Quality Gate checks
# All Python code has been migrated to Rust and Go
requires = []
build-backend = "setuptools.build_meta"

[project]
name = "market-intel-brain"
version = "0.1.0"
description = "Empty Python project - migrated to Rust + Go"
authors = []
dependencies = []

# No Python dependencies - using Rust + Go architecture
