[package]
name = "market-intel-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "REST API for Market Intel Brain"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
jsonwebtoken = { workspace = true }
ring = { workspace = true }
argon2 = { workspace = true }

# Internal dependencies
market-intel-core = { workspace = true }

# External dependencies
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
validator = { version = "0.18", features = ["derive"] }
headers = "0.4"
mime = "0.3"
bytes = "1.5"

[dev-dependencies]
tokio-test = "0.4"
tower-test = "0.4"
