[package]
name = "market-intel-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and utilities for Market Intel Brain"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
ordered-float = { workspace = true }
async-trait = { workspace = true }

# External dependencies
strum = { version = "0.25", features = ["derive"] }
regex = "1.10"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
