[package]
name = "market-intel-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and utilities for Market Intel Brain"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async utilities
async-trait = { workspace = true }
tokio-util = { workspace = true }
futures = "0.3"

# Concurrency and lock-free data structures
crossbeam = "0.8"
parking_lot = "0.12"
atomic-wait = "1.1"

# Performance and optimization
cache-padded = "1.3"

# Configuration
toml = "0.8"
config = "0.14"

# Utilities
num_cpus = "1.16"
rust_decimal = { version = "1.36", features = ["serde-float"] }
strum = { version = "0.26", features = ["derive"] }
ordered-float = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
