[package]
name = "market-intel-messaging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Aeron-based ultra-low latency messaging for Market Intel Brain"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
config = { workspace = true }

# Internal dependencies
market-intel-core = { workspace = true }

# Aeron dependencies
aeron = "0.3"
aeron-driver = "0.3"
aeron-sys = "0.3"

# Additional messaging dependencies
bytes = "1.5"
prost = "0.12"
async-trait = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "messaging_bench"
harness = false
