[workspace]
members = [
    "core-engine",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Market Intel Brain Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
num_cpus = "1.16"
