[package]
name = "market-intel-core-engine"
version = "0.1.0"
edition = "2021"
authors = ["Market Intel Brain Team"]
license = "MIT"
description = "Core Engine with LMAX Disruptor for Market Intel Brain"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# gRPC
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
tonic-health = "0.10"

# Core engine dependencies
market-intel-core = { path = "../../../core" }

# Async utilities
async-trait = "0.1"
tokio-util = { workspace = true }
futures = "0.3"
tokio-stream = "0.1"

# Concurrency and lock-free data structures
crossbeam = "0.8"
parking_lot = "0.12"
atomic-wait = "1.1"

# Performance and optimization
cache-padded = "1.3"

# Configuration
toml = "0.8"
config = "0.13"

# File system watching
notify = "6.1"

# Utilities
num_cpus = "1.16"

# HTTP client for data ingestion
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Message queue (Redpanda/Kafka)
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl", "zstd"] }

# Analytics dependencies
serde_json = { workspace = true }

# Vector database dependencies
qdrant-client = "1.7"
lru = "0.12"

# Metrics
prometheus = "0.13"

# OpenTelemetry
tracing-opentelemetry = "0.21"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.20"
opentelemetry-prometheus = "0.14"
opentelemetry-semantic-conventions = "0.13"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "core-engine"
path = "src/main.rs"

[lib]
name = "core_engine"
path = "src/lib.rs"
